--- a/style.css
+++ b/style.css
@@ -202,6 +202,7 @@ img {
 
     .image3 {
         top: 40px;
+        right: 40%;
         transform: rotate(6deg);
         width: 120px;
         height: 160px;
