--- a/style.css
+++ b/style.css
@@ -131,35 +131,35 @@ img {
 }
 
 .image1 {
-    top: 80px;
+    top: 10%;
     right: 0;
     width: 150px;
     transform: rotate(20deg);
 }
 
 .image2 {
-    top: 180px;
+    top: 10%;
     left: 0;
     width: 150px;
     transform: rotate(-10deg);
 }
 
 .image3 {
-    top: 40px;
+    top: 2%;
     transform: rotate(6deg);
     width: 160px;
     height: 240px;
 }
 
 .image4 {
-    top: 520px;
+    top: 70%;
     right: -8px;
     transform: rotate(-6deg);
     width: 260px;
 }
 
 .image5 {
-    top: 520px;
+    top: 70%;
     left: -8px;
     transform: rotate(16deg);
     width: 260px;
@@ -186,21 +186,18 @@ img {
     }
 
     .image1 {
-        top: 80px;
         right: -4px;
         width: 120px;
         transform: rotate(20deg);
     }
 
     .image2 {
-        top: 180px;
         left: -10px;
         width: 120px;
         transform: rotate(-10deg);
     }
 
     .image3 {
-        top: 40px;
         right: 40%;
         transform: rotate(6deg);
         width: 120px;
@@ -208,12 +205,10 @@ img {
     }
 
     .image4 {
-        top: 520px;
         width: 190px;
     }
 
     .image5 {
-        top: 500px;
         width: 180px;
     }
 }
